add index.html and css files

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" href="style.css"
   </head>
 
-  <body>
+  <body> 
     <div>
+     <!-- ALL content goes here -->
+     <div id="all-contents">
+     </div>
       <nav>
         
         <h1>Jeremy's Website</h1>
@@ -20,13 +23,12 @@
         </ul>
     </nav>
       <main></main>
-    </div>
     <h2>Jeremy</h2>
     <p>Student</p>
- <img src="https://mail.google.com/mail/u/0?ui=2&ik=6b08eebdc9&attid=0.1&permmsgid=msg-f:1800855612968136093&th=18fdeca37ebbed9d&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9Ua8NLqakL-Y_Bku3JrKqBMMakMAphI1F-sUOe11nlxIm9n5gr4WAY7lJDB1b4PfPNt_MWZRvRFrYRpKNU89ciOCk5ryV2Gc8b3P50rtK2wEm61qur94P4pqg&disp=emb&realattid=18fdec9d9cee7e7aded2" 
-    width="388"
-</div>
-    <h3> Intrest</h3>
+ <img "sidebar-img" src="https://mail.google.com/mail/u/0?ui=2&ik=6b08eebdc9&attid=0.1&permmsgid=msg-f:1800855612968136093&th=18fdeca37ebbed9d&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9Ua8NLqakL-Y_Bku3JrKqBMMakMAphI1F-sUOe11nlxIm9n5gr4WAY7lJDB1b4PfPNt_MWZRvRFrYRpKNU89ciOCk5ryV2Gc8b3P50rtK2wEm61qur94P4pqg&disp=emb&realattid=18fdec9d9cee7e7aded2" 
+    width="150"
+</div> 
+    <h3> Interest</h3>
       <ul>
         <li>Cooking</li>
         <li>Sports(basketball, football,& run track)</li>
