--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(154, 17, 167);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -62,7 +62,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX = 0;
+             var points = 0;
+			 var speed = 10 
 
 			
 			/* 
@@ -71,8 +73,11 @@
 			turn it around! 
 			*/
 			function update() {
-				
-
+				positionX = positionX + speed;
+				moveBoxTo(positionX)
+				if (positionX > boardWidth) {speed = -speed}
+				if (positionX < -50) {speed = -speed}
+	
 			};
 
 			/* 
@@ -81,7 +86,15 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				points = points + 1;
+				speed = speed + 3
+				if (speed > 0) {
+					speed = speed + 3;
+				}
+				else if (speed < 0) {
+					speed = speed - 3} 
+				changeBoxText(points);
 
 
 			};
