--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -43,7 +43,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
-            var boardHeight = board.Height();	
+            var boardHeight = board.height();	
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
